# fastapi-example-todo-app

./: .pre-commit-config.yaml  LICENSE  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2023-04-13__0001_init.py  2023-04-13__0002_add_phone_number_column_on_user_table.py  2023-04-14__0003_create_address_table.py
app/: auth.py  database.py  exceptions.py  models.py
app/auth/: router.py  schemas.py
app/todo/: router.py  schemas.py
docker/: docker-compose.yml
docker/db/: Dockerfile  my.cnf
